[STRETCH] Adjusted styles to stop line-slipping with moment.js

--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -18,12 +18,12 @@
 .main-heading {
   padding-right: 2%;
   font-size: 30px;
+  width: 40%;
 }
 
-span {
+.main-heading-items {
   color: grey;
-  font-size: 16px;
-  padding-right: 1%;
+
 }
 
 p {
